boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_nested_record_line.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>
#nullable enable

using System;

namespace Demo
{
    public readonly record struct Line(
        Point Start,
        Point End
    )
    {
        internal static Line Decode(WireReader reader) =>
            new Line(
                Point.Decode(reader),
                Point.Decode(reader)
            );

        internal int WireEncodedSize() =>
            16 +
            16;

        internal void WireEncodeTo(WireWriter wire)
        {
            this.Start.WireEncodeTo(wire);
            this.End.WireEncodeTo(wire);
        }
    }
}
