boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_record_person_with_docs.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
assertion_line: 999
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>
#nullable enable

using System;
using System.Text;

namespace Demo
{
    /// <summary>
    /// A person record.
    ///
    /// Wraps Vec&lt;String&gt; &amp; friends.
    /// </summary>
    /// <param name="Name">The display name.</param>
    /// <param name="Age">Age in years.</param>
    public readonly record struct Person(
        string Name,
        uint Age
    )
    {
        internal static Person Decode(WireReader reader) =>
            new Person(
                reader.ReadString(),
                reader.ReadU32()
            );

        internal int WireEncodedSize() =>
            (4 + Encoding.UTF8.GetByteCount(this.Name)) +
            4;

        internal void WireEncodeTo(WireWriter wire)
        {
            wire.WriteString(this.Name);
            wire.WriteU32(this.Age);
        }
    }
}
